--- a/index.html
+++ b/index.html
@@ -220,17 +220,27 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
 <script>
-    // =================================================================
-    // DÜZELTİLMİŞ KOD: BURAYA KENDİ FIREBASE CONFIG BİLGİLERİNİ YAPIŞTIR
-    // =================================================================
-    const firebaseConfig = {
-      apiKey: "SENIN_API_KEYIN_BURAYA",
-      authDomain: "SENIN_PROJEN.firebaseapp.com",
-      projectId: "SENIN_PROJE_IDN",
-      storageBucket: "SENIN_PROJEN.appspot.com",
-      messagingSenderId: "SENIN_SENDER_IDN",
-      appId: "SENIN_APP_IDN"
-    };
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDcV7d9n32e19zhkwXcxmcCQS5aels0lsA",
+  authDomain: "kpss-planlayicim.firebaseapp.com",
+  projectId: "kpss-planlayicim",
+  storageBucket: "kpss-planlayicim.firebasestorage.app",
+  messagingSenderId: "1077913113896",
+  appId: "1:1077913113896:web:cdc7338b51453f4686ec1d",
+  measurementId: "G-83GFGCGTTC"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
     
     // Firebase'i sadece bir kere başlat
     if (!firebase.apps.length) {
